# Kasino

./: .gitignore  README.md
backend/: CMakeLists.txt  Makefile  client.c  server.c
backend/lib/bullshit/: CMakeLists.txt
backend/lib/bullshit/include/: card.h  game.h  player.h
backend/lib/bullshit/src/: game.c  game_client.c  game_server.c  main.c
backend/lib/card/: CMakeLists.txt
backend/lib/card/include/: card.h
backend/lib/card/src/: card.c  deck.c
backend/lib/db/include/: db.h
backend/lib/db/src/: connection.c
backend/lib/poker/: CMakeLists.txt
backend/lib/poker/include/: pokergame.h
backend/lib/poker/src/: README.md  card.c  deck.c
backend/lib/poker/test/: card_test.c
backend/lib/pokergame/: CMakeLists.txt
backend/lib/pokergame/include/: pokergame.h
backend/lib/pokergame/src/: hand.c  pokergame.c
backend/lib/pokergame/test/: mctest.c  test  unit_tests.c
backend/lib/utils/: testing.h
backend/src/: main.c
