cmake_minimum_required(VERSION 3.22)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_COMPILER clang)
set(CMAKE_C_FLAGS "-Wall")

project(Kasino_bullshit C) # SET PROJECT NAME HERE

file(GLOB_RECURSE SOURCES "src/*.c")

set(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..) # SET LIB DIR HERE
list(APPEND ALL_LIBS card) # APPEND LIB HERE


foreach(LIB IN LISTS ALL_LIBS)
    list(APPEND ALL_LIBS "${LIB_DIR}/${LIB}/include")
endforeach()


add_library(${PROJECT_NAME} ${SOURCES})


target_include_directories(${PROJECT_NAME} PUBLIC ${ALL_LIBS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${LIB_DIR}/card/build/libKasino_card.a)
